--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,4 +27,9 @@ dependencies {
     compile files('libs/http-request-3.0.jar')
     compile files('libs/httpclient-4.5.3.jar')
     compile files('libs/httpcore-4.4.6.jar')
+    compile files('libs/commons-codec-1.10.jar')
+    compile files('libs/commons-net-3.6.jar')
+    compile files('libs/org.apache.commons.httpclient.jar')
+    compile 'org.jbundle.util.osgi.wrapped:org.jbundle.util.osgi.wrapped.org.apache.http.client:4.1.2'
+
 }
