--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".Rotate"
+            android:label="Test"
+            />
+        <activity android:name=".Calibrate"
+            android:label="Test"
+            />
     </application>
 
 </manifest>
